--- a/package.json
+++ b/package.json
@@ -8,26 +8,26 @@
   },
   "author": "brentvatne@gmail.com",
   "dependencies": {
-    "babel-plugin-syntax-trailing-function-commas": "^6.3.13",
-    "babel-plugin-transform-object-rest-spread": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-preset-stage-3": "^6.3.13",
-    "fbemitter": "^2.0.0",
-    "fbjs": "^0.6.0",
-    "immutable": "^3.7.5",
-    "invariant": "^2.2.0",
-    "lodash": "^3.10.1",
-    "randomcolor": "^0.4.2",
-    "react-native": "exponentjs/react-native#exp-latest",
-    "react-native-swipe-actions": "^0.1.0"
+    "babel-plugin-syntax-trailing-function-commas": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-3": "^6.5.0",
+    "fbemitter": "^2.0.2",
+    "fbjs": "^0.8.2",
+    "immutable": "^3.8.1",
+    "invariant": "^2.2.1",
+    "lodash": "^4.12.0",
+    "randomcolor": "^0.4.4",
+    "react": "^0.14.8",
+    "react-native": "^0.25.1",
+    "react-native-swipe-actions": "^0.5.3"
   },
   "devDependencies": {
-    "babel": "^6.3.13",
-    "babel-jest": "^6.0.1",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
+    "babel-jest": "^12.0.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.3.13",
-    "jest-cli": "^0.8.2"
+    "jest-cli": "^12.0.2"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
